--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "Jason Yu <me@ycmjason.com>",
   "license": "ISC",
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "vue": "^2.6.10",
-    "vue-function-api": "^2.2.0",
+    "vue-function-api": "^3.0.0-beta.0",
     "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
+    "stylus": "^0.54.7",
     "typescript": "^3.5.3",
     "vue-template-compiler": "^2.6.10"
   }
