--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-anguage: node_js
+language: node_js
 
 node_js: 10
 
@@ -7,11 +7,7 @@ env:
 
 install:
   - npm ci
-  - npm run build
-
-script:
-  - npm test
-  - npm run build
+  - npm run build -- --public-url /perfect-colour
 
 deploy:
   provider: pages
