--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "Jason Yu <me@ycmjason.com>",
   "license": "ISC",
   "dependencies": {
+    "@vue/composition-api": "^0.2.1",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "vue": "^2.6.10",
-    "vue-function-api": "^3.0.0-beta.0",
     "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
