--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "perfect-colour",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vite serve app --outDir ./dist",
-    "build": "vite build app --outDir ./dist",
-    "types": "tsc --noEmit"
-  },
-  "author": "Jason Yu <me@ycmjason.com>",
-  "license": "ISC",
-  "dependencies": {
-    "normalize.css": "^8.0.1",
-    "prettier": "^2.1.2",
-    "vue": "^3.0.2"
-  },
-  "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.2",
-    "stylus": "^0.54.8",
-    "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4"
-  }
+	"private": true,
+	"name": "perfect-colour",
+	"version": "0.0.1",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc -b && vite build",
+		"preview": "vite preview"
+	},
+	"type": "module",
+	"dependencies": {
+		"modern-normalize": "^3.0.1",
+		"vue": "^3.5.13"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/stylus": "^0",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"@vue/tsconfig": "^0.7.0",
+		"stylus": "^0.64.0",
+		"typescript": "~5.7.2",
+		"vite": "^6.2.0",
+		"vue-tsc": "^2.2.4"
+	},
+	"author": "Jason Yu <me@ycmjason.com>",
+	"license": "ISC",
+	"packageManager": "yarn@4.7.0"
 }
